# saros-dlmm-sdk-rs

./: .gitignore  BUG_REPORT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT_RUST.md  changes.md  security_audit.md
.github/workflows/: ci.yaml
docs/audit/: PR_BODY.md
idls/: liquidity_book.json  rewarder_hook.json
liquidity-book/: Cargo.toml
programs/liquidity-book/: Cargo.toml
programs/liquidity-book/src/: lib.rs
programs/rewarder-hook/: Cargo.toml
programs/rewarder-hook/src/: lib.rs
rewarder-hook/: Cargo.toml
rewarder-hook/idls/: rewarder_hook.json
rewarder-hook/src/: lib.rs
saros/: Cargo.toml
saros-config/: Cargo.toml
saros-config/src/: devnet.rs  lib.rs  mainnet.rs
saros-dlmm/: BUG_FIXES_SUMMARY.md  CHANGELOG.md  Cargo.toml  SECURITY_FIXES.md
saros-dlmm/src/: constants.rs  errors.rs  lib.rs  main.rs  swap_instruction.rs
saros-dlmm/src/amms/: amm.rs  loader.rs  mod.rs  position_manager.rs  test_harness.rs
saros-dlmm/src/math/: bin_math.rs  bin_math_tests.rs  fees.rs  mod.rs  swap_manager.rs  u128x128_math.rs  utils.rs  utils_tests.rs
saros-dlmm/src/state/: bin.rs  bin_array.rs  fee.rs  mod.rs  pair.rs  pair_tests.rs
saros-dlmm/src/utils/: helper.rs  mod.rs  swap_instruction.rs
saros-dlmm/tests/: security_vulnerabilities.rs  test_amms.rs  test_position.rs
saros-dlmm/tests/fixtures/: README.md
saros-sdk/: Cargo.toml
saros-sdk/src/: constants.rs  errors.rs  lib.rs
saros-sdk/src/instruction/: bin_array.rs  claim.rs  hook_position.rs  mod.rs  position.rs  swap.rs
saros-sdk/src/math/: bin_math.rs  fees.rs  swap_manager.rs  u128x128_math.rs  u64x64_math.rs  utils.rs
saros-sdk/src/state/: bin.rs  bin_array.rs  hook.rs  hook_position.rs  mod.rs  pair.rs  position.rs
saros-sdk/src/utils/: helper.rs
saros/idls/: liquidity_book.json
saros/idls/devnet/: liquidity_book.json
saros/src/: lib.rs
