[workspace]
resolver = "2"
members = ["saros-dlmm"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-syn = "0.31.0"
anchor-gen = "0.4.1"
solana-sdk = "~2.1"
solana-program = "~2.1"
solana-client = "~2.1"
solana-account-decoder = "~2.1"
solana-program-test = "~2.1"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
jupiter-amm-interface = "=0.5.1"
arrayref = "0.3.9"
anyhow = "1.0"
thiserror = "2.0.12"
ruint = "1.9.0"
rust_decimal = { version = "1.36.0", features = ["maths", "c-repr"] }

# SPL
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }

proptest = "1.4.0"
