[workspace]
resolver = "2"
members = ["saros-dlmm"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-syn = "0.31.0"
anchor-gen = "0.4.1"
solana-sdk = ">=2.2"
solana-program = ">=2.2"
solana-client = ">=2.2"
solana-account-decoder = ">=2.2"
solana-program-test = ">=2.2"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
jupiter-amm-interface = "0.6.0"
arrayref = "0.3.9"
anyhow = "1.0"
thiserror = "2.0.12"
ruint = "1.9.0"
rust_decimal = { version = "1.36.0", features = ["maths", "c-repr"] }
itertools = "0.14.0"
saros = { path = "saros" }


# use for test
async-trait = "0.1.77"
assert_matches = "1.5.0"
glob = "0.3.1"
lazy_static = "1.2.0"
serde_json = "1.0.82"
ahash = "0.8.11"
bincode = "1.3.3"


# SPL
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "9", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }

proptest = "1.4.0"
