[package]
name = "saros-dlmm-sdk"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
arrayref = { workspace = true }
jupiter-amm-interface = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token = { workspace = true }
ruint = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
