[package]
name = "liquidity-book"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
bytemuck = { workspace = true }
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
rand = "0.8.5"
